# RaytracerAttempt1

./: CMakeLists.txt  README.md
res/: textures.txt
res/shaders/: default_2d.frag  default_2d.vert  raytrace.comp
src/: app.cpp  app.h  camera.h  glad.c  input.cpp  input.h  main.cpp  renderer_2d.cpp  renderer_2d.h
src/wrapper/: framebuffer.cpp  framebuffer.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  shader_mgr.cpp  shader_mgr.h  stb_image.h  texture.cpp  texture.h  texture_mgr.cpp  texture_mgr.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
